# Tropic

./: .gitignore  CMakeLists.txt  README.md
grammar/: Sessions.ini
lib/Qsci/darwin/: libqscintilla2_qt6.15.dylib
lib/Qsci/win32/MSVC/: qscintilla2_qt6.exp  qscintilla2_qt6.lib
rsc/: Tropic.qrc
scripts/codegen_helpers/: gen_settings.py
src/: CMakeLists.txt  TpAppConnectionInfo  TpAppInstanceInfo  TpApplication  TpColorScheme  TpEditor  TpFontScheme  TpGeneralAction  TpGeneralActionGroup  TpGeneralMenu  TpGeneralToolBar  TpGlobals  TpMainWindow  TpMenuBar  TpSingleApplication  TpStackedWidget  TpStatusBar  TpTabBar  TpTabSplitter  TpTabWidget  TpWelcomeLabel  main.cpp  tpappconnectioninfo.h  tpappinstanceinfo.h  tpapplication.cpp  tpapplication.h  tpcolorscheme.h  tpeditor.cpp  tpeditor.h  tpfontscheme.h  tpgeneralaction.cpp  tpgeneralaction.h  tpgeneralactiongroup.cpp  tpgeneralactiongroup.h  tpgeneralmenu.cpp  tpgeneralmenu.h  tpgeneraltoolbar.cpp  tpgeneraltoolbar.h  tpglobals.h  tpmainwindow.cpp  (+17 more)
src/Dialogs/: CMakeLists.txt  TpDialogOpen  TpDialogOpenDir  TpDialogSave  TpDialogSaveCopyTo  TpMessageConfirmClose  TpMessageCritical  tpdialogopen.cpp  tpdialogopen.h  tpdialogopendir.cpp  tpdialogopendir.h  tpdialogsave.cpp  tpdialogsave.h  tpdialogsavecopyto.cpp  tpdialogsavecopyto.h  tpmessageconfirmclose.cpp  tpmessageconfirmclose.h  tpmessagecritical.cpp  tpmessagecritical.h
src/Lexers/: CMakeLists.txt  TpFamilyASMLexer  TpFamilyBasicLexer  TpFamilyCLexer  TpFamilyFortranLexer  TpFamilyHTMLLexer  TpFamilyHexLexer  TpFamilyMatlabLexer  TpFamilyPythonLexer  TpGeneralLexer  TpLexerASP  TpLexerActionScript  TpLexerAviSynth  TpLexerBash  TpLexerBatch  TpLexerBlitzBasic  TpLexerC  TpLexerCMake  TpLexerCPP  TpLexerCPPQt  TpLexerCS  TpLexerCSS  TpLexerCoffeeScript  TpLexerD  TpLexerDiff  TpLexerFortran  TpLexerFortran77  TpLexerFreeBasic  TpLexerGDScript  TpLexerHTML  TpLexerHTMLFull  TpLexerIDL  TpLexerIntelHex  TpLexerJSON  TpLexerJava  TpLexerJavaScript  TpLexerLaTeX  TpLexerLua  TpLexerMASM  TpLexerMakefile  (+168 more)
src/Models/: CMakeLists.txt  TpBookmarkItem  TpDocumentItem  TpFileModel  TpHtmlDelegate  tpbookmarkitem.cpp  tpbookmarkitem.h  tpdocumentitem.cpp  tpdocumentitem.h  tpfilemodel.cpp  tpfilemodel.h  tphtmldelegate.cpp  tphtmldelegate.h
src/Utilities/: CMakeLists.txt  TpFileSystemAssistants  TpOpenAssistant  TpSaveAssistant  TpSaveCopyAssistant  tpfilesystemassistants.h  tpopenassistant.cpp  tpopenassistant.h  tpsaveassistant.cpp  tpsaveassistant.h  tpsavecopyassistant.cpp  tpsavecopyassistant.h
src/Views/: CMakeLists.txt  TpBookmarkView  TpDocumentView  TpFileView  tpbookmarkview.cpp  tpbookmarkview.h  tpdocumentview.cpp  tpdocumentview.h  tpfileview.cpp  tpfileview.h
src/Widgets/: CMakeLists.txt  TpBookmarkDock  TpDocumentDock  TpFileDock  TpFindContainer  TpFindDock  TpFindInFilesContainer  TpFindInFilesDock  TpFindToolBar  TpGeneralComboBox  TpGeneralLineEdit  TpGeneralToolButton  tpbookmarkdock.cpp  tpbookmarkdock.h  tpdocumentdock.cpp  tpdocumentdock.h  tpfiledock.cpp  tpfiledock.h  tpfindcontainer.cpp  tpfindcontainer.h  tpfinddock.cpp  tpfinddock.h  tpfindinfilescontainer.cpp  tpfindinfilescontainer.h  tpfindinfilesdock.cpp  tpfindinfilesdock.h  tpfindtoolbar.cpp  tpfindtoolbar.h  tpgeneralcombobox.cpp  tpgeneralcombobox.h  tpgenerallineedit.cpp  tpgenerallineedit.h  tpgeneraltoolbutton.cpp  tpgeneraltoolbutton.h
